# robot-Arm

./: .gitignore  pyproject.toml  test.py
src/ale/: brain.py  config.py  finetune.json  game.py  game_rl.py  game_rob.py  old.py  play.py  robot.py  setup.py  test.py
src/assests/mayflash-arcade-stick/source/: Arcade_Stick_1_5.fbx
src/assets/: arcade_stick.usd  arcade_stick_physics.usd  stick.usd
src/isaac_so_arm101/robots/: __init__.py
src/isaac_so_arm101/scripts/: zero_agent.py
src/isaac_so_arm101/scripts/rsl_rl/: play.py  train.py
src/isaac_so_arm101/tasks/lift/: joint_pos_env_cfg.py  lift_env_cfg.py
src/isaac_so_arm101/tasks/lift/mdp/: rewards.py
src/isaac_so_arm101/tasks/reach/: joint_pos_env_cfg.py  reach_env_cfg.py
src/scripts/: list_envs.py  random_agent.py  zero_agent.py
src/scripts/rsl_rl/: play.py  train.py
src/sim/enhance/datasets/: __init__.py  hdf5_dataset_file_handler.py  lerobot_dataset_handler.py
src/sim/enhance/envs/: __init__.py  direct_rl_env.py  direct_rl_env_cfg.py  manager_based_rl_digital_twin_env.py  manager_based_rl_digital_twin_env_cfg.py  manager_based_rl_leisaac_mimic_env.py
src/sim/enhance/managers/: __init__.py  lerobot_recorder_manager.py  recorder_manager.py
src/sim/robots/: __init__.py
src/sim/scripts/: generate.py  list_envs.py  random_agent.py  zero_agent.py
src/sim/tasks/play/: __init__.py  joint_pos_env_cfg.py  play_env_cfg.py
src/sim/utils/: domain_randomization.py  robot_utils.py
src/tasks/lift/: __init__.py  joint_pos_env_cfg.py  lift_env_cfg.py
src/tasks/reach/: __init__.py  joint_pos_env_cfg.py
(+9 files in other folders)
