[project]
name = "sim"
version = "1.2.0"
description = "Reinforcement Learning with the SO-ARM100 / SO-ARM101 in Isaac Lab"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "isaaclab[all,isaacsim]==2.3.0",
    "setuptools",
    "torch==2.7.0",
    "torchvision==0.22.0",
]

[project.scripts]
list_envs = "sim.scripts.list_envs:main"
zero_agent = "sim.scripts.zero_agent:main"
random_agent = "sim.scripts.random_agent:main"
generate = "sim.scripts.generate:main"

[tool.uv]
index-strategy = "unsafe-best-match"
environments = [
  "sys_platform == 'linux' and implementation_name == 'cpython' and python_version == '3.11'",
  "sys_platform == 'win32' and implementation_name == 'cpython' and python_version == '3.11'"
]

[[tool.uv.index]]
url = "https://pypi.nvidia.com/"

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu128"

[build-system]
requires = ["uv_build>=0.8.21,<0.9.0"]
build-backend = "uv_build"
